css/chat.less
flex: 1;
box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
display: flex;
flex-flow: column nowrap;
height: 100%;
z-index: 5;

.connection {
  flex: 0 0 @topbar-height;
  display: flex;
  flex-flow: column nowrap;
  align-items: middle;
  padding-left: 2rem;
  padding-right: 1rem;
  padding-bottom: 1rem;

  background: @bg1;
  border-top: 0.5rem solid @fg0;
  border-bottom: 1px solid #c5cbd0;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  z-index: 10;

  .spacer {
    flex: auto;
  }

  .room {
    flex: none;

    .room-name {
      color: @fg1;
      display: block;
      font-size: 3em;
      font-weight: 800;
    }
  }

  .connection-state {
  }
}

.chat-room-content {
  display: flex;
  flex-direction: row;
  overflow: hidden;
}

.message {
  display: flex;
  flex-flow: row nowrap;
  align-items: flex-start;
  overflow: hidden;

  .nick {
    line-height: 1.2em;
    margin-right: @nick-horizontal-padding;
  }

  .content-and-time {
    flex: 1;
    line-height: 1.2em;
    overflow-wrap: break-word;
  }

  .content {
    display: inline-block;
    padding-top: @nick-vertical-padding;
  }

  time {
    display: none;
  }

  &.emote {
    .nick {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      margin-right: 0;
    }

    .content-and-time {
      .content {
        @scale: 0.9;
        font-size: @scale*1rem;
        padding: @nick-vertical-padding @nick-horizontal-padding 0 @nick-horizontal-padding;
        line-height: 1.2em/@scale;
        margin-bottom: -0.1rem;
      }
    }
  }
}

.children {
  padding-left: 2rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;

  &.top {
    flex: 1;
    overflow-y: scroll;
    margin-left: 0;
    padding: 0.5rem 0.5rem 0.5rem 0;
    z-index: 1;
  }
}

.thread {
  margin-bottom: 0.4rem;
}

// Ends of threads are complicated places. This is the only place we want to show timestamps,
// and there are some positioning hacks needed for smooth border styling.
.top .thread .thread:last-child {
  margin-bottom: 0;

  > .message {
    margin-bottom: -0.4rem;
    time {
      display: inline;
    }
  }

  > .children {
    margin-top: 0.4rem;
  }
}

.users {
  display: flex;
  flex-flow: column nowrap;
  background: @bg2;
  border-left: 1px solid @fg2;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  overflow-x: hidden;
  overflow-y: auto;
  width: 160px;

  .user-list {
    flex-shrink: 1;

    display: flex;
    flex-flow: column nowrap;
    align-items: flex-start;

    margin-bottom: 5pt;
  }

  .user {
    padding-bottom: @nick-vertical-padding;
    padding-top: @nick-vertical-padding;
    overflow: hidden;
    //text-overflow: ellipsis;
  }

  .nick {
    text-overflow: ellipsis;
  }
}

